# MineChat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle  settings.gradle
app/: README.md  build.gradle
app/src/androidTest/java/vip/cdms/minechat/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/vip/cdms/minechat/: FirstFragment.java  MainActivity.java  MineActivity.java  MineChatApplication.java  ProtocolInitializer.java  SecondFragment.java
app/src/main/res/anim/: fragment_in.xml  fragment_out.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  fragment_account.xml  fragment_plugin.xml  fragment_script.xml  fragment_server.xml  layout_drawer_list.xml  layout_floating_chat.xml  layout_list_player.xml  layout_list_slide.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: preferences.xml
gradle/wrapper/: gradle-wrapper.properties
mc-oreui/: README.md  build.gradle
mc-oreui/src/main/res/drawable/: button_icon_background_selector.xml  round_black_background.xml
mc-oreui/src/main/res/layout/: layout_appbar.xml  layout_dialog.xml  layout_image_button.xml  preference.xml  preference_dropdown.xml  preference_switch.xml
mc-oreui/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
mc-oreui/src/main/res/values-zh-rCN/: strings.xml
protocol/: README.md  build.gradle
protocol/src/main/cpp/: CMakeLists.txt  binding.cpp  binding.hpp  embed.cpp  embed.hpp  env.cpp  env.hpp  log.h  node-android-jni.cpp
protocol/src/main/cpp/include/node/: config.gypi
(+117 files in other folders)
